# linear_rnn

./: .gitignore  README.md  pyproject.toml
compare/: __init__.py  cache.py  experiments.py  model.py  profile.py  train.py
notebooks/: 01_regression_sanity.ipynb  02_noisy_drifting_regression.ipynb  03_mqar.ipynb  04_mesa_uncertainty_signal.ipynb
notebooks/_builders/: assemble_mqar.py  build_nb03.py  build_nb04.py  build_nb05.py  deai_01.py  deai_02.py  deai_03.py  fix_summary_cell.py  save_and_declutter_figs.py  simplify_01.py  simplify_02.py  simplify_03.py  streamline_mqar.py
notebooks/_builders/nb_backup_pre_restructure/: 00_datasets.ipynb  01_regression_sanity.ipynb  02_noisy_drifting_regression.ipynb  03_mqar_capacity.ipynb  04_mqar_distractors.ipynb  05_delta_cg_interaction.ipynb
synthtasks/: __init__.py  metrics.py  mqar.py  parity.py  regression.py  sanity.py
